# os

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  knowledge_bootstrap.ks  kolibri.sh  lighthouserc.json  plan.md  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  (+6 more)
apps/: kolibri_indexer.c  kolibri_inference.py  kolibri_node.c  kolibri_runtime.c  kolibri_runtime.h  kolibri_server.c  ks_compiler.c
archive/: README.md
backend/: api.py  server.py
core/: config.py  feedback_store.py  journal.py  kolibri_sim.py  memory.py  telemetry.py  tools.py  tracing.py
deploy/: README.md  docker-compose.yml
docs/: ACCESSIBILITY.md  CONTRIBUTING.md  KOLIBRI-Sigma-Core-Spec-v1.0-draft.md  README.md  UX_CHECKLIST.md  api.md  architecture.md  boevoy_roadmap_ru.md  conflict_resolution.md  decimal_cognition.md  deployment.md  developer_guide.md  dorozhnaya_karta_zadachi.md  faq.md  formula_evolution.md  genome_chain.md  kolibri_improvement_checklist.md  kolibri_integrated_prototype.md  kolibri_os.md  kolibri_script.md  kolibri_sim_c_port.md  live_learning.md  master_prompt.md  networking.md  node-graph-data.md  operations.md  packaging_guide.md  project_review_ru.md  project_status.md  public_interfaces.md  release_notes.md  release_process.md  research_agenda.md  russian_response_steps.md  security_policy.md  service_playbook.md  status_analysis.md  swarm_protocol.md  training_guide.md  troubleshooting.md  (+3 more)
experiments/: README.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
kernel/: formula.c  main.c
ml_templates/: classification.py
scripts/: README.md  __init__.py  anomaly_predictor.py  beta_feedback.py  build_iso.sh  build_wasm.sh  check_backend_health.sh  check_frontend_health.sh  ci_bootstrap.sh  coverage_guard.py  docs_portal.py  evaluate_model.py  feedback_server.py  generate_script.js  ingest_knowledge.py  kolibri_dev.py  llm_teacher.py  mentorship_program.py  model_certifier.py  package_release.sh  project_health.py  resolve_conflicts.py  run_all.sh  run_cluster.sh  run_kolibri_stack.sh  soak.py  train_model.py
support/: program.py
tests/: test_auth_service.py  test_backend_service.py  test_decimal.c  test_digits.c  test_feedback_store.py  test_formula.c  test_genome.c  test_knowledge_index.c  test_kolibri_sim.py  test_launch_playbook.py  test_main.c  test_mentorship_program.py  test_net.c  test_public_api.c  test_resolve_conflicts.py  test_roy.c  test_script.c  test_soak_script.py  test_stress_report.py  test_support_program.py
training/: __init__.py  mentorship.py
wasm/: CMakeLists.txt  kolibri_core.c  kolibri_sim_wasm.c
(+225 files in other folders)
